/*
 * July 21, 2017 - v69.911
 */

* Fixes to work with the latest steamgift changes
* Fixed many old bugs.
* Decrypted giveaways now available (star icon at the top) (decrypted giveaways are from users of the original script who make secret giveaways normal users can't see)
* More memes ( ͡° ͜ʖ ͡°)

* Here's my setup which I recommend you copy. 
http://i.imgur.com/HvCvS1f.png


/*
 * June 16, 2017 - v69.69.3
 */

* Updated base to latest ESGST and added memes to the buttons.

/*
 * June 07, 2017 - v1.69
 */

* Initial build.